--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -6,6 +6,6 @@
   background: asset-data-url('welcome.jpg');
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;	
+  min-width: 800px;
+  min-height: 600px;	
 }
