--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,1 +1,7 @@
 .welcome_index
+	.welcome_index__title
+		| Welcome To <br/> Quiz Master
+	.welcome_index__button_left
+		= link_to "New Question", question_index_path 
+	.welcome_index__button_right
+		= link_to "Take Quiz", test_path
