--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,21 @@
-<h2>Sign up</h2>
+<div class="overlay">
+<div class="login-page">
+	<div class="form">
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "register-form") do |f| %>
+  			<%= devise_error_messages! %>
+    			<%= f.email_field :email, autofocus: true, placeholder: "Email" %>
+			<% if @minimum_password_length %>
+			<em>(<%= @minimum_password_length %> characters minimum)</em>
+			<% end %><br />
+			<%= f.password_field :password, autocomplete: "off", placeholder: "Password" %>
+    			<%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password Confirmation" %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+			<div class="actions">
+				<%= f.submit "Sign up" %>
+			</div>
+		<% end %>
+		<%= render "devise/shared/links" %>
+	</div>
+</div>
+</div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
