--- a/app/views/question/_list.html.slim
+++ b/app/views/question/_list.html.slim
@@ -1,28 +1,32 @@
-| List questions
-br
-table
-    tr
-        td
-            | No
-        td
-            | Email
-        td
-            | Question
-        td
-            | Available Answer
-    - counter = 0
-    - questions.each do |question|
-        tr
-            td
-                = counter += 1
-            td
-                = question.user.email
-            td
-                = question.question
-            td
-                = question.answers
-            td
-                = link_to "Edit", action: 'edit', id: question.id
-            td
-                = link_to "Remove", question_path(question.id), method: :delete, data: { confirm: 'are you sure delete this data?' }
-= link_to "New Question", action: :new
+table class="table-fill"
+	thead
+		tr
+			th
+				| No
+			th
+				| Email
+			th
+				| Question
+			th
+				| Available Answer
+			th colspan="2" 
+				| Actions
+	- counter = 0
+	- questions.each do |quest|
+		tbody
+			tr
+				td
+					= counter += 1
+				td
+					= quest.user.email
+				td
+					= quest.question
+				td
+					= quest.answers
+				td
+					= link_to "Edit", action: 'edit', id: quest.id
+				td
+					= link_to "Remove", question_path(quest.id), method: :delete, data: { confirm: 'are you sure delete this data?' }
+	tr
+		td colspan="6" class="td_new"
+			= link_to "New Question", action: :new
