fix style and button cannot answer question

--- a/app/views/answer/load_question.html.slim
+++ b/app/views/answer/load_question.html.slim
@@ -11,4 +11,4 @@
 					= hidden_field_tag "question_ids[#{counter}]", question.id
 
 					= text_field_tag "answer_par[#{counter}]"
-		= submit_tag "create"
+			= submit_tag "Answer"
