--- a/app/views/answer/result.html.slim
+++ b/app/views/answer/result.html.slim
@@ -14,6 +14,8 @@
 					| Your Answer
 				th
 					| Status
+				th	
+					| created_at
 		- counter = 0
 		- @answers.each do |answer|
 			tbody
@@ -30,3 +32,5 @@
 						= answer.answer
 					td
 						= answer.correct
+					td
+						= answer.created_at
