--- a/app/views/question/_form.html.slim
+++ b/app/views/question/_form.html.slim
@@ -4,4 +4,4 @@
 			= f.text_field :question, placeholder: "Input Your Question"
 			em = "(if your question have more than one answer plase separate answer with coma(,))" 
 			= f.text_field :answers, placeholder: "Input Your Answer"
-			= f.submit "Create New Question"
+			= f.submit "Apply Change"
